src/objects/Sync_Attempt__c.object
<CustomObject>
    <fields>
        <fullName>Attempts__c</fullName>
        <label>Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DONATION</fullName>
                </value>
                <value>
                    <fullName>SUPPORTER</fullName>
                </value>
                <value>
                    <fullName>EVENT</fullName>
                </value>
                <value>
                    <fullName>REGISTRATION</fullName>
                </value>
                <value>
                    <fullName>SUBSCRIPTION</fullName>
                </value>
                <value>
                    <fullName>CAMPAIGN</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>TASK</fullName>
                </value>
                <value>
                    <fullName>PLEDGE</fullName>
                </value>
                <value>
                    <fullName>QUESTION</fullName>
                </value>
                <value>
                    <fullName>ANSWER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Funraise Sync Attempt</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Funraise Sync Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funraise Sync Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>